# SiteToSheet

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  random_walk.py  requirements.txt
.github/workflows/: pylint.yml  python-package.yml
Advent of Code/Day_10/: new_a.txt  part1.py  part2.py
Advent of Code/Day_12/: part1.py
Advent of Code/Day_2/: day_2.py
Advent of Code/Day_3/: day3_attempt_2.py  day3_part2.py  day_3.py
Advent of Code/Day_4/: part1.py  part2.py  part2_2.py
Advent of Code/Day_5/: part1.py  part2_bad.py  part2_better.py
Advent of Code/Day_6/: part1.py  part2.py
Advent of Code/Day_7/: copied.py  he.txt  part1 copy.py  part1.py  part2.py
Advent of Code/Day_8/: part1 copy.py  part1.py  part1_cheat.py  part2.py
Advent of Code/Day_9/: day_1_c.py  day_2_c.py  part1.py  part2.py
Coding_languages/HTML_test/: testing.html
Google_Maps/: time_to_work.py
Right_move/: .env  For_github.py  Housing 2024.csv  README.md  combined_data_read.py  data_manipulation.py  filename.shlf.bak  full_data.bak  full_data.txt  geo_location.py  google_maps_class.py  google_maps_output_to_csv.py  items.json  libraries_for_virtual_environment.txt  link.txt  main.py  reading_csv.py  requirements.txt  right_move_scalp.py  single_website_read.py
Right_move/api_clients/: google_sheets_client.py
Right_move/local_storage/: house_data.bak  house_data.dir  link_data.dir
Right_move/scrapers/: web_scraping.py
Right_move/src/: run.py
Right_move/test/: For_github.py  data_manipulation.py  sales_data.csv
SiteToSheet/: README.md  pyproject.toml  requirements.txt
Test_website/: package-lock.json  package.json  test.js
jontys_notes/: Untitled.canvas  reaching_nirvana.canvas
local_storage/: link_data.bak
src/: run.py
test/: reading_csv.py  single_website_read.py
tests/: spacytest.py  test_integration_scrape_sheets.py  test_web_scraping.py
(+39 files in other folders)
